--- a/package.json
+++ b/package.json
@@ -21,5 +21,15 @@
   "bugs": {
     "url": "https://github.com/jrwmacintire/traversy-tutorials/issues"
   },
-  "homepage": "https://github.com/jrwmacintire/traversy-tutorials#readme"
+  "homepage": "https://github.com/jrwmacintire/traversy-tutorials#readme",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
+    "express": "^4.16.4",
+    "gridfs-stream": "^1.1.1",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.3.13",
+    "multer": "^1.4.1",
+    "multer-gridfs-storage": "^3.2.3"
+  }
 }
