--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A collection of projects based on Traversy Media tutorials.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -31,5 +33,8 @@
     "mongoose": "^5.3.13",
     "multer": "^1.4.1",
     "multer-gridfs-storage": "^3.2.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.6"
   }
 }
